--- a/frontend/app/tailwind.css
+++ b/frontend/app/tailwind.css
@@ -84,10 +84,13 @@ body {
   }
 }
 
+.selected-menu-item  {
+  background-color: hsl(var(--border));
+}
+
+
+
 @layer base {
-
-
-
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
